
  * Added configurable 'Overscan' option for fullscreen modes. (TODO: doc)

  * Added fractional TIA zooms (TODO: doc)

  * Removed 'tia.fsfill' option, replacing it with 'tia.fs_stretch'.  This
    new option allows to preserve TIA image aspect ratio in fullscreen
    mode, or stretch to fill the entire screen. (TODO: doc)

  * Added hotkey for sound on/off.

  * Added support for CDFJ bankswitching type.

  * Added option to display dialogs in screen corners. (TODO: doc)

  * Fixed TIA 'Center' option, Stella now remembers the last windowed position. (TODO: doc)

  * Fixed not working 7800 pause key.

  * Fixed display of negative values in debugger; sometimes they were
    shown as positive.

  * Fixed cheatcode handling in 2K and 4K ROMs.

  * Fixed 'Dancing Plate (Unknown) (PAL)' to use joystick.

  * Fixed bug where frying one ROM was continued with the next ROM.

  * Allow the DPC+ scheme to not enable playfield 'jitter' effect for
    certain older DPC+ driver versions; this allows 'Epic Adventure' ROM
    to finally work in Stella.

  * PNG/ZIP image support is now conditionally compiled into Stella.
    All major ports (Linux/macOS/Windows) have it enabled by default.

  * SDL/GUI support is now conditionally compiled into Stella.  All major
    ports (Linux/macOS/Windows) have it enabled by default.  This is
    currently used only by the libretro port.

  * Updated included PNG library to latest stable version.

-Have fun!


5.1.3 to 6.0: (December 23, 2018)

  * Note: because of major TIA sound changes, the state file format has
          changed, and old state files will not work with this release.

  * New cycle exact audio core based on work by Chris Brenner (crispy);
    greatly improved audio emulation accuracy (i.e. E.T., Ms. Pacman).

  * Full rewrite of the audio subsystem; resample TIA output to target
    sample rate directly in Stella.

  * Added option to force stereo sound for all ROMs, or to use the
    setting on a per-ROM basis.
